fix mobile typecheck for node globals

--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -12,7 +12,8 @@
       ]
     },
     "types": [
-      "expo-router/types"
+      "expo-router/types",
+      "node"
     ],
     "skipLibCheck": true,
     "esModuleInterop": true,
