Document MOBILE_BETA_MODE env var

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ COOKIE_SECRET=your-cookie-secret-change-in-production
 
 # CORS (frontend URL)
 CORS_ORIGIN=http://localhost:5173
+
+# Mobile beta testing mode - enables reusable tokens, no expiry, unlimited devices
+# MOBILE_BETA_MODE=true
