--- a/docker/.env.example
+++ b/docker/.env.example
@@ -16,3 +16,7 @@ CORS_ORIGIN=*
 # LOG_LEVEL=info
 # POLLER_ENABLED=true
 # POLLER_INTERVAL=15000
+
+# Mobile beta testing mode - enables reusable tokens, no expiry, unlimited devices
+# Useful for TestFlight/beta testing. Disable in production.
+# MOBILE_BETA_MODE=true
